feat: change text

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -41,7 +41,7 @@
     }
   },
   "home": {
-    "title": "Welcome to my Chat App",
+    "title": "Chao mung to my Chat App",
     "sub-title": "It's easy talking to your friend with RVK Chat App",
     "login-title": "Signin",
     "register-title": "Signup",
